--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
-PORT=10000
+PORT=10000 (or 8082)
 
 # MSSQL Database Configuration
-DB_HOST=192.168.0.106
+DB_HOST=172.23.0.104
 DB_USER=sa
 DB_PASS=Cadopt@1234
 DB_NAME=PRICOL_DB
