--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "dotenv": "^16.4.7",
     "express": "^5.1.0",
     "mssql": "^11.0.1",
+    "sqlite3": "^5.1.7",
     "systeminformation": "^5.25.11"
   }
 }
