--- a/.env
+++ b/.env
@@ -5,5 +5,5 @@ DB_HOST=172.23.0.104
 DB_USER=sa
 DB_PASS=Cadopt@1234
 DB_NAME=PRICOL_DB
-DATABASE_URL=mysql://root:RPpEUDYMxTOYjRyCADIafnsSXIYrnmku@nozomi.proxy.rlwy.net:32870/railway
+DATABASE_URL=mysql://root:RPpEUDYMxTOYjRyCADIafnsSXIYrnmku@mysql.railway.internal:3306/railway
 
